[gd_scene load_steps=51 format=2]

[ext_resource path="res://Other/Montserrat-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Art/Player/locke_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Art/Player/key_progress.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "fall_locked"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=2]
resource_name = "fall_locked_backpack"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 28 ]
}

[sub_resource type="Animation" id=3]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="Animation" id=4]
resource_name = "fall_unlocked_backpack"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 46 ]
}

[sub_resource type="Animation" id=5]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=8]
resource_name = "jump_locked_backpack"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 26 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 20 ]
}

[sub_resource type="Animation" id=10]
resource_name = "jump_unlocked_backpack"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 44 ]
}

[sub_resource type="Animation" id=11]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 13, 12, 11, 10, 9, 8, 7, 6 ]
}

[sub_resource type="Animation" id=12]
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.15, 0.45 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "play_walk_sound"
}, {
"args": [  ],
"method": "play_walk_sound"
} ]
}

[sub_resource type="Animation" id=13]
resource_name = "run_locked_backpack"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 28, 29 ]
}

[sub_resource type="Animation" id=14]
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 20, 21, 22, 23 ]
}

[sub_resource type="Animation" id=15]
resource_name = "run_unlocked_backpack"
length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47 ]
}

[sub_resource type="Animation" id=16]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Rig/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "fall_locked"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "fall_locked_backpack"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "fall_unlocked"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "fall_unlocked_backpack"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "jump_locked"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "jump_locked_backpack"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "jump_unlocked"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "jump_unlocked_backpack"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "run_locked"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "run_locked_backpack"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "run_unlocked"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "run_unlocked_backpack"

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachine" id=43]
states/fall_locked/node = SubResource( 17 )
states/fall_locked/position = Vector2( 409, 254 )
states/fall_locked_backpack/node = SubResource( 18 )
states/fall_locked_backpack/position = Vector2( -312, 254 )
states/fall_unlocked/node = SubResource( 19 )
states/fall_unlocked/position = Vector2( 409, 591 )
states/fall_unlocked_backpack/node = SubResource( 20 )
states/fall_unlocked_backpack/position = Vector2( -312, 622 )
states/jump_locked/node = SubResource( 21 )
states/jump_locked/position = Vector2( 409, 107 )
states/jump_locked_backpack/node = SubResource( 22 )
states/jump_locked_backpack/position = Vector2( -312, 107 )
states/jump_unlocked/node = SubResource( 23 )
states/jump_unlocked/position = Vector2( 409, 437 )
states/jump_unlocked_backpack/node = SubResource( 24 )
states/jump_unlocked_backpack/position = Vector2( -312, 437 )
states/run_locked/node = SubResource( 25 )
states/run_locked/position = Vector2( 98, 107 )
states/run_locked_backpack/node = SubResource( 26 )
states/run_locked_backpack/position = Vector2( -643, 107 )
states/run_unlocked/node = SubResource( 27 )
states/run_unlocked/position = Vector2( 98, 437 )
states/run_unlocked_backpack/node = SubResource( 28 )
states/run_unlocked_backpack/position = Vector2( -643, 437 )
transitions = [ "run_locked", "jump_locked", SubResource( 29 ), "run_unlocked", "jump_unlocked", SubResource( 30 ), "jump_locked", "fall_locked", SubResource( 31 ), "fall_locked", "run_locked", SubResource( 32 ), "jump_unlocked", "fall_unlocked", SubResource( 33 ), "fall_unlocked", "run_unlocked", SubResource( 34 ), "run_locked", "run_unlocked", SubResource( 35 ), "run_locked_backpack", "jump_locked_backpack", SubResource( 36 ), "jump_locked_backpack", "fall_locked_backpack", SubResource( 37 ), "fall_locked_backpack", "run_locked_backpack", SubResource( 38 ), "run_locked_backpack", "run_unlocked_backpack", SubResource( 39 ), "run_unlocked_backpack", "jump_unlocked_backpack", SubResource( 40 ), "jump_unlocked_backpack", "fall_unlocked_backpack", SubResource( 41 ), "fall_unlocked_backpack", "run_unlocked_backpack", SubResource( 42 ) ]
start_node = "run_locked_backpack"
graph_offset = Vector2( -845, 35 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=44]

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 3.91339, 4.08117 )

[sub_resource type="DynamicFont" id=46]
font_data = ExtResource( 1 )

[node name="Player" type="KinematicBody2D"]
pause_mode = 1
collision_mask = 272
script = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fall_locked = SubResource( 1 )
anims/fall_locked_backpack = SubResource( 2 )
anims/fall_unlocked = SubResource( 3 )
anims/fall_unlocked_backpack = SubResource( 4 )
anims/idle_locked = SubResource( 5 )
anims/idle_unlocked = SubResource( 6 )
anims/jump_locked = SubResource( 7 )
anims/jump_locked_backpack = SubResource( 8 )
anims/jump_unlocked = SubResource( 9 )
anims/jump_unlocked_backpack = SubResource( 10 )
anims/lock = SubResource( 11 )
anims/run_locked = SubResource( 12 )
anims/run_locked_backpack = SubResource( 13 )
anims/run_unlocked = SubResource( 14 )
anims/run_unlocked_backpack = SubResource( 15 )
anims/unlock = SubResource( 16 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 43 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 44 )

[node name="Muzzle" type="Node2D" parent="."]
position = Vector2( -0.734275, 3.10416 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 45 )

[node name="GroundedLabel" type="Label" parent="."]
visible = false
margin_left = -18.3325
margin_top = -23.8844
margin_right = 21.6675
margin_bottom = -2.88442
custom_fonts/font = SubResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VelocityLabel" type="Label" parent="."]
visible = false
margin_left = -16.8325
margin_top = -36.5094
margin_right = 23.1675
margin_bottom = -15.5094
custom_fonts/font = SubResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UnlockedLabel" type="Label" parent="."]
visible = false
margin_left = -19.3285
margin_top = -38.7712
margin_right = 20.6715
margin_bottom = -17.7712
custom_fonts/font = SubResource( 46 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Rig" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Rig"]
texture = ExtResource( 2 )
vframes = 8
hframes = 6
frame = 27

[node name="ForwardRaycast" type="RayCast2D" parent="Rig"]
position = Vector2( 0, 2 )
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
enabled = true
cast_to = Vector2( 0, 15 )
collision_mask = 16

[node name="KeysLabel" type="Label" parent="Rig"]
visible = false
margin_left = -3.88909
margin_top = -19.7106
margin_right = 36.1109
margin_bottom = -5.71062
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="Node2D" parent="Rig"]
position = Vector2( -4.81559, 0.334087 )

[node name="Key1" type="Sprite" parent="Rig/Keys"]
visible = false
position = Vector2( -0.118431, -13.8352 )
texture = ExtResource( 4 )

[node name="Key2" type="Sprite" parent="Rig/Keys"]
visible = false
position = Vector2( 4.746, -13.835 )
texture = ExtResource( 4 )

[node name="Key3" type="Sprite" parent="Rig/Keys"]
visible = false
position = Vector2( 9.555, -13.835 )
texture = ExtResource( 4 )

[node name="GroundedRaycasts" type="Node2D" parent="Rig"]

[node name="GroundedRaycast" type="RayCast2D" parent="Rig/GroundedRaycasts"]
scale = Vector2( 0.166, 1 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 16

[node name="GroundedRaycast2" type="RayCast2D" parent="Rig/GroundedRaycasts"]
position = Vector2( -3, 0 )
scale = Vector2( 0.166, 1 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 16

[node name="GroundedRaycast3" type="RayCast2D" parent="Rig/GroundedRaycasts"]
position = Vector2( 3, 0 )
scale = Vector2( 0.166, 1 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 16

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, -1 )
current = true
zoom = Vector2( 0.3, 0.3 )
